--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
             <div class="card-body">
               <h5 class="card-title">Credit Card Fraud Detection</h5>
               <p class="card-text">Developed a machine learning model in Python to detect fraudulent credit card transactions with high accuracy. Used scikit-learn for modeling and validation.</p>
-              <a href="#" class="btn btn-primary">Link to project</a>
+              <a href="https://github.com/Iswariya2706/Portfolio/blob/60a20f552e6f53a562528ceb62a0342a7c56f875/Credit_Card_Fraud_Detection.ipynb" class="btn btn-primary">Link to project</a>
             </div>
           </div>
         </div>
@@ -421,7 +421,7 @@
             <div class="card-body">
               <h5 class="card-title">Diabetes Prediction</h5>
               <p class="card-text">Built a Python-based predictive model to diagnose diabetes using patient data. Utilized logistic regression and decision trees to achieve accurate predictions.</p>
-              <a href="#" class="btn btn-primary">Link to project</a>
+              <a href="https://github.com/Iswariya2706/Portfolio/blob/2f0de8e42d76a4e6acb018dc8e51803710d970c7/Diabetes_Prediction.ipynb" class="btn btn-primary">Link to project</a>
             </div>
           </div>
         </div>
