--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             <div class="card-body">
               <h5 class="card-title">Netflix Analysis</h5>
               <p class="card-text">Performed a comprehensive analysis of Netflix’s dataset using Python. Extracted insights on genre popularity, content release trends, and user behavior to identify viewer patterns.</p>
-              <a href="#" class="btn btn-primary">Link to project</a>
+              <a href="https://github.com/Iswariya2706/Portfolio/blob/8208f3e44b47abc57d4031bb108aeddc55a4f8b6/MY%20NETFLIX%20ANALYSIS.ipynb" class="btn btn-primary">Link to project</a>
             </div>
           </div>
         </div>
